[package]
name = "beemq-codec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
v3_1_1 = []
v5_0 = []

[dependencies]
tokio-util = { version = "0.7.11", features = ["codec"] }
bytes = { version = "1.6.0" }
